--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,12 +1,12 @@
 header.header 
     nav.nav.nav--tours 
-        a.nav__el(href='#') All tours
+        a.nav__el(href='/') All tours
     .header__logo 
-        img(src='img/logo-white.png' alt='Natours logo')
+        img(src='/img/logo-white.png' alt='Natours logo')
     nav.nav.nav__user 
-        a(href='#' class='nav__el') My bookings
+        //- a(href='#' class='nav__el') My bookings
         //- a(href='#' class='nav__el')
         //-     img.nav__user-img(src='img/user.jpg' alt='User photo')
         //-     span Mohanad
-        button.nav__el Log in
+        a.nav__el(href='/login') Log in
         button.nav__el.nav__el--cta Sign up
