client-side login functionality

--- a/views/base.pug
+++ b/views/base.pug
@@ -17,7 +17,7 @@ body
     block content
         h1 This is place holder heading
     
-
     // FOOTER
     include _footer
+    script(src='/js/login.js')
     script(src='/js/mapbox.js')
