--- a/views/base.pug
+++ b/views/base.pug
@@ -19,5 +19,5 @@ body
     
     // FOOTER
     include _footer
-    script(src='/js/login.js')
-    script(src='/js/mapbox.js')
+    script(src="/js/bundle.js")
+
